src/main/java/com/example/boilerplate/core/support/error/CoreException.java
package com.example.boilerplate.core.support.error;


public class CoreException extends TypeException {
    public CoreException(ExceptionType exceptionType) {
        super(exceptionType);
    }
}
